# come-fly-with-me

./: .gitignore  LICENSE  README.md  prices_2023-03-14.csv  pyproject.toml  scrapy.cfg
Dockerfile/: Dockerfile.scraper
airline_scraper/: pipelines.py  settings.py  utils.py
airline_scraper/spiders/: RyanAir.py  WizzAir.py
clickhouse/flight_data/: db.down.sql  db.up.sql
clickhouse/flight_data/flights/: kafka_consumer.up.sql  table.down.sql  table.up.sql
deploy/docker-compose/: README.md  docker-compose.yml
deploy/docker-compose/ansible/: pipeline.down.yml  pipeline.up.yml
grafana/: example_query.sql  grafana-clickhouse-datasource.yaml
scrapers/: Dockerfile  pyproject.toml  scrapy.cfg  server.py
scrapers/Dockerfile/: Dockerfile.scraper
scrapers/scrapers/: airline_route.py  airline_routes.json  items.py  middlewares.py  pipelines.py  settings.py  utils.py
scrapers/scrapers/spiders/: EasyJet.py  RyanAir.py  WizzAir.py  base_spider.py
scrapers/tests/: test_airline_route.py
