[tool.poetry]
name = "airline-scraper"
version = "0.1.0"
description = ""
authors = ["Alexandru Placinta <alexandru.placinta@nexthink.com>"]
readme = "README.md"
packages = [{include = "airline_scraper"}]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "2.7.1"
scrapy-user-agents = "0.1.1"
scrapy-selenium = "0.0.7"
undetected-chromedriver = "3.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
