[tool.poetry]
name = "airline-scraper"
version = "0.1.0"
description = ""
authors = ["Alexandru Placinta <alexandru.placinta@nexthink.com>"]
readme = "README.md"
packages = [{include = "airline_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "2.7.1"
kafka-python = "2.0.2"
dataclasses-json = "0.5.7"
fastapi = "0.95.1"
uvicorn = "0.21.1"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
