[tool.poetry]
name = "come-fly-with-me"
version = "0.1.1"
description = ""
authors = ["Alexandru Placinta <placintaalexandru1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
kafka-python = "2.0.2"
dataclasses-json = "0.5.7"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
